[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scrips/Areaportalpurple.gd" type="Script" id=1]
[ext_resource path="res://Elementos/tecla e.png" type="Texture" id=2]
[ext_resource path="res://Elementos/Portales/Portal-Transparent-purple.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 48.0
height = 96.0

[node name="portalpurple" type="Node2D"]

[node name="Areaportalp" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="Portal-Transparent-purple" type="Sprite" parent="Areaportalp"]
position = Vector2( 0, 1.90735e-06 )
scale = Vector2( 0.315574, 0.313158 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areaportalp"]
shape = SubResource( 1 )

[node name="TeclaE" type="Sprite" parent="Areaportalp"]
visible = false
position = Vector2( 0, -128 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 2 )

[connection signal="body_shape_entered" from="Areaportalp" to="Areaportalp" method="_on_Areaportalp_body_shape_entered"]
[connection signal="body_shape_exited" from="Areaportalp" to="Areaportalp" method="_on_Areaportalp_body_shape_exited"]
